Fixing Login details