@@ -1,2 +1,6 @@
 # CPS Project
 
+1. Add VM OPTIONS TO Client JavaFX Application through this text: --module-path "\path\to\javafx-sdk-20\lib" --add-modules javafx.controls,javafx.fxml
+2. Start OCSFMediatorExample via Clean Install command
+3. Add Maven with properties exec.args=3000, then start Server via exec:java command along with MySQL Workbench software. 
+
